--- a/backend.scss
+++ b/backend.scss
@@ -202,3 +202,12 @@ $delete-btn-background-hover: darken($delete-btn-background, 10%);
 		background-color: $delete-btn-background-hover;
 	}
 }
+
+.tab-editor-wrap,
+.delete-tab-btn-wrap {
+	padding-top: 10px;
+}
+
+.input-group-label.help-icon {
+	cursor: pointer;
+}
